--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
+  <header>
+
     <nav class="top-bar">
 
-      <div>
-
+      <div class="center">
         <img src="img/mini-logo.png" alt="BrazilJS Logo" />
         <p>moving &amp; uniting</p>
 
@@ -25,10 +26,21 @@
         <iframe class="facebook-share-button" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbraziljs.org%2F&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=199580610147156" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
-
       </div>
 
     </nav>
+
+    <section class="banner">
+
+      <div class="center">
+        <img class="logo" src="img/logo.png" alt="BrazilJS Logo">
+        <h1>moving &amp; uniting</h1>
+        <p>We not only bring content to people, we want to unite them. <a href="#">Read our manifesto</a></p>
+      </div>
+
+    </section>
+
+  </header>
 
   <!-- Tweet Button -->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
