projects presentation done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <ul>
           <li>/ <a href="#">Community</a></li>
-          <li>/ <a href="#">Conference</a></li>
+          <li>/ <a href="#">Conferences</a></li>
           <li>/ <a href="#">Labs</a></li>
           <li>/ <a href="#">Cast</a></li>
         </ul>
@@ -41,6 +41,52 @@
     </section>
 
   </header>
+
+  <section class="content">
+
+    <h2 class="center">Let us present our projects! <span>You'll see so much from now.</span></h2>
+
+    <ul class="projects center">
+
+      <li class="project-1">
+        <figure>
+          <img src="img/icon-community.png" alt="Icon - Community">
+        </figure>
+        <h3>Community</h3>
+        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+        <div class="arrow"></div>
+      </li>
+
+      <li class="project-2">
+        <figure>
+          <img src="img/icon-conf.png" alt="Icon - Conference">
+        </figure>
+        <h3>Conferences</h3>
+        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+        <div class="arrow"></div>
+      </li>
+
+      <li class="project-3">
+        <figure>
+          <img src="img/icon-cast.png" alt="Icon - Cast">
+        </figure>
+        <h3>Cast</h3>
+        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+        <div class="arrow"></div>
+      </li>
+
+      <li class="project-4">
+        <figure>
+          <img src="img/icon-labs.png" alt="Icon - Labs">
+        </figure>
+        <h3>Labs</h3>
+        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+        <div class="arrow"></div>
+      </li>
+
+    </ul>
+
+  </section>
 
   <!-- Tweet Button -->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
