--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 
   </header>
 
-  <section class="content">
+  <section class="content center">
 
-    <h2 class="center">Let us present our projects! <span>You'll see so much from now.</span></h2>
+    <h2>Let us present our projects! <span>You'll see so much from now.</span></h2>
 
-    <ul class="projects center">
+    <ul class="projects">
 
       <li class="project-1">
         <figure>
           <img src="img/icon-community.png" alt="Icon - Community">
         </figure>
-        <h3>Community</h3>
+        <h4>Community</h4>
         <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
         <div class="arrow"></div>
       </li>
@@ -61,7 +61,7 @@
         <figure>
           <img src="img/icon-conf.png" alt="Icon - Conference">
         </figure>
-        <h3>Conferences</h3>
+        <h4>Conferences</h4>
         <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
         <div class="arrow"></div>
       </li>
@@ -70,7 +70,7 @@
         <figure>
           <img src="img/icon-cast.png" alt="Icon - Cast">
         </figure>
-        <h3>Cast</h3>
+        <h4>Cast</h4>
         <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
         <div class="arrow"></div>
       </li>
@@ -79,12 +79,91 @@
         <figure>
           <img src="img/icon-labs.png" alt="Icon - Labs">
         </figure>
-        <h3>Labs</h3>
+        <h4>Labs</h4>
         <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
         <div class="arrow"></div>
       </li>
 
     </ul>
+
+    <div class="highlights news">
+
+      <h5>In the news</h5>
+
+      <ul>
+
+        <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+
+        <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+
+        <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+
+      </ul>
+
+    </div>
+
+    <div class="highlights confs">
+
+      <h5>Next confs</h5>
+
+      <ul>
+
+        <li>
+          <div class="date">
+            <p class="day">08</p>
+            <p class="month">jan</p>
+          </div>
+          <a href="#">Front in Rio 2013</a>
+          <p>Rio de Janeiro / RJ</p>
+        </li>
+
+        <li>
+          <div class="date">
+            <p class="day">08</p>
+            <p class="month">jan</p>
+          </div>
+          <a href="#">Front in Rio 2013</a>
+          <p>Rio de Janeiro / RJ</p>
+        </li>
+
+        <li>
+          <div class="date">
+            <p class="day">08</p>
+            <p class="month">jan</p>
+          </div>
+          <a href="#">Front in Rio 2013</a>
+          <p>Rio de Janeiro / RJ</p>
+        </li>
+
+      </ul>
+
+    </div>
+
+    <div class="highlights cast">
+
+      <h5>Previous cast</h5>
+
+      <div class="date">
+        <p class="day">08</p>
+        <p class="month">jan</p>
+      </div>
+      <a href="#">Vida de Programador</a>
+      <p>Em mais um episódio sensacional, contamos com a presença do Andre Noel, o @ProgramadorReal para falar de suas aventuras nas tirinhas do Vida de Programador!</p>
+
+    </div>
+
+    <div class="highlights labs">
+
+      <h5>Last experiment</h5>
+
+      <div class="last-exp">
+        <div class="desc">
+          <a href="#">Simple CSS3 3D Cube</a>
+          <p>Jaydson Gomes</p>
+        </div>
+      </div>
+
+    </div>
 
   </section>
 
