get involved done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -42,130 +42,146 @@
 
   </header>
 
-  <section class="content center">
+  <section class="content">
 
-    <h2>Let us present our projects! <span>You'll see so much from now.</span></h2>
+    <div class="center">
 
-    <ul class="projects">
+      <h2>Let us present our projects! <span>You'll see so much from now.</span></h2>
 
-      <li class="project-1">
-        <figure>
-          <img src="img/icon-community.png" alt="Icon - Community">
-        </figure>
-        <h4>Community</h4>
-        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
-        <div class="arrow"></div>
-      </li>
+      <ul class="projects">
 
-      <li class="project-2">
-        <figure>
-          <img src="img/icon-conf.png" alt="Icon - Conference">
-        </figure>
-        <h4>Conferences</h4>
-        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
-        <div class="arrow"></div>
-      </li>
-
-      <li class="project-3">
-        <figure>
-          <img src="img/icon-cast.png" alt="Icon - Cast">
-        </figure>
-        <h4>Cast</h4>
-        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
-        <div class="arrow"></div>
-      </li>
-
-      <li class="project-4">
-        <figure>
-          <img src="img/icon-labs.png" alt="Icon - Labs">
-        </figure>
-        <h4>Labs</h4>
-        <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
-        <div class="arrow"></div>
-      </li>
-
-    </ul>
-
-    <div class="highlights news">
-
-      <h5>In the news</h5>
-
-      <ul>
-
-        <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
-
-        <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
-
-        <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
-
-      </ul>
-
-    </div>
-
-    <div class="highlights confs">
-
-      <h5>Next confs</h5>
-
-      <ul>
-
-        <li>
-          <div class="date">
-            <p class="day">08</p>
-            <p class="month">jan</p>
-          </div>
-          <a href="#">Front in Rio 2013</a>
-          <p>Rio de Janeiro / RJ</p>
+        <li class="project-1">
+          <figure>
+            <img src="img/icon-community.png" alt="Icon - Community">
+          </figure>
+          <h4>Community</h4>
+          <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+          <div class="arrow"></div>
         </li>
 
-        <li>
-          <div class="date">
-            <p class="day">08</p>
-            <p class="month">jan</p>
-          </div>
-          <a href="#">Front in Rio 2013</a>
-          <p>Rio de Janeiro / RJ</p>
+        <li class="project-2">
+          <figure>
+            <img src="img/icon-conf.png" alt="Icon - Conference">
+          </figure>
+          <h4>Conferences</h4>
+          <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+          <div class="arrow"></div>
         </li>
 
-        <li>
-          <div class="date">
-            <p class="day">08</p>
-            <p class="month">jan</p>
-          </div>
-          <a href="#">Front in Rio 2013</a>
-          <p>Rio de Janeiro / RJ</p>
+        <li class="project-3">
+          <figure>
+            <img src="img/icon-cast.png" alt="Icon - Cast">
+          </figure>
+          <h4>Cast</h4>
+          <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+          <div class="arrow"></div>
+        </li>
+
+        <li class="project-4">
+          <figure>
+            <img src="img/icon-labs.png" alt="Icon - Labs">
+          </figure>
+          <h4>Labs</h4>
+          <p>Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</p>
+          <div class="arrow"></div>
         </li>
 
       </ul>
 
-    </div>
+      <div class="highlights news">
 
-    <div class="highlights cast">
+        <h5>In the news</h5>
 
-      <h5>Previous cast</h5>
+        <ul>
 
-      <div class="date">
-        <p class="day">08</p>
-        <p class="month">jan</p>
+          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+
+          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+
+          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+
+        </ul>
+
       </div>
-      <a href="#">Vida de Programador</a>
-      <p>Em mais um episódio sensacional, contamos com a presença do Andre Noel, o @ProgramadorReal para falar de suas aventuras nas tirinhas do Vida de Programador!</p>
 
-    </div>
+      <div class="highlights confs">
 
-    <div class="highlights labs">
+        <h5>Next confs</h5>
 
-      <h5>Last experiment</h5>
+        <ul>
 
-      <div class="last-exp">
-        <div class="desc">
-          <a href="#">Simple CSS3 3D Cube</a>
-          <p>Jaydson Gomes</p>
+          <li>
+            <div class="date">
+              <p class="day">08</p>
+              <p class="month">jan</p>
+            </div>
+            <a href="#">Front in Rio 2013</a>
+            <p>Rio de Janeiro / RJ</p>
+          </li>
+
+          <li>
+            <div class="date">
+              <p class="day">08</p>
+              <p class="month">jan</p>
+            </div>
+            <a href="#">Front in Rio 2013</a>
+            <p>Rio de Janeiro / RJ</p>
+          </li>
+
+          <li>
+            <div class="date">
+              <p class="day">08</p>
+              <p class="month">jan</p>
+            </div>
+            <a href="#">Front in Rio 2013</a>
+            <p>Rio de Janeiro / RJ</p>
+          </li>
+
+        </ul>
+
+      </div>
+
+      <div class="highlights cast">
+
+        <h5>Previous cast</h5>
+
+        <div class="date">
+          <p class="day">08</p>
+          <p class="month">jan</p>
         </div>
+        <a href="#">Vida de Programador</a>
+        <p>Em mais um episódio sensacional, contamos com a presença do Andre Noel, o @ProgramadorReal para falar de suas aventuras nas tirinhas do Vida de Programador!</p>
+
       </div>
+
+      <div class="highlights labs">
+
+        <h5>Last experiment</h5>
+
+        <div class="last-exp">
+          <div class="desc">
+            <a href="#">Simple CSS3 3D Cube</a>
+            <p>Jaydson Gomes</p>
+          </div>
+        </div>
+
+      </div>
+
+      <hr />
+
+      <article class="get-involved">
+        <img src="img/img-getinvolved.png" alt="Brazilian Heart">
+        <h3>Get involved</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Nulla facilisi. Integer volutpat turpis at eros vestibulum non tristique elit lacinia. Fusce non dolor a ipsum iaculis scelerisque. <a href="#">Donec varius gravida odio</a>.</p>
+      </article>
+
+      <hr />
 
     </div>
 
   </section>
+
+  <!-- <footer></footer> -->
 
   <!-- Tweet Button -->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
