--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 
         <ul>
 
-          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condiment interdum molestie...</a></li>
 
-          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condiment...</a></li>
 
-          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.</a></li>
+          <li><a href="#">sum dolor sit amet, consectetur adipiscing elit. Nunc condiment interdum molestie...</a></li>
 
         </ul>
 
@@ -170,12 +170,29 @@
       <hr />
 
       <article class="get-involved">
+
         <img src="img/img-getinvolved.png" alt="Brazilian Heart">
         <h3>Get involved</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Nulla facilisi. Integer volutpat turpis at eros vestibulum non tristique elit lacinia. Fusce non dolor a ipsum iaculis scelerisque. <a href="#">Donec varius gravida odio</a>.</p>
+
       </article>
 
       <hr />
+
+      <section class="sponsors">
+
+        <h5>Sponsorship and Donations</h5>
+        <a href="#" class="help-link">Help us to realize our dreams</a>
+
+        <ul>
+          <li><a href="#"><img src="img/sponsor-1.png" alt="Sponsor 1"></a></li>
+          <li><a href="#"><img src="img/sponsor-2.png" alt="Sponsor 2"></a></li>
+          <li><a href="#"><img src="img/sponsor-3.png" alt="Sponsor 3"></a></li>
+          <li><a href="#"><img src="img/sponsor-4.png" alt="Sponsor 4"></a></li>
+          <li><a href="#"><img src="img/sponsor-5.png" alt="Sponsor 5"></a></li>
+        </ul>
+
+      </section>
 
     </div>
 
