--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="top-bar">
 
       <div class="center">
-        <img src="img/mini-logo.png" alt="BrazilJS Logo" />
+        <a href="/"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
 
         <ul>
@@ -198,7 +198,34 @@
 
   </section>
 
-  <!-- <footer></footer> -->
+  <footer>
+
+    <div class="center">
+
+      <img src="img/logo-pb.png" alt="BrazilJS Logo">
+
+      <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the web community in Brazil.</p>
+
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Manifesto</a></li>
+        <li><a href="#">Sponsors</a></li>
+        <li><a href="#">Get involved</a></li>
+        <li><a href="#">Contact us</a></li>
+      </ul>
+
+      <ul class="social">
+        <li><a href="#">Twitter @BrazilJS</a></li>
+        <li><a href="#">Google Plus</a></li>
+        <li><a href="#">Facebook</a></li>
+      </ul>
+
+      <p class="license">© 2012. Content available under a <a href="#">Creative Commons</a> license.</p>
+
+    </div>
+
+  </footer>
 
   <!-- Tweet Button -->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
