removing some sections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>BrazilJS Foundation</title>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -16,12 +16,12 @@
         <a href="/"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
 
-        <ul>
+        <!-- <ul>
           <li>/ <a href="#">Community</a></li>
           <li>/ <a href="#">Conferences</a></li>
           <li>/ <a href="#">Labs</a></li>
           <li>/ <a href="#">Cast</a></li>
-        </ul>
+        </ul> -->
 
         <iframe class="facebook-share-button" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbraziljs.org%2F&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=199580610147156" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
 
@@ -46,7 +46,7 @@
 
     <div class="center">
 
-      <h2>Let us present our projects! <span>You'll see so much from now.</span></h2>
+      <!-- <h2>Let us present our projects! <span>You'll see so much from now.</span></h2>
 
       <ul class="projects">
 
@@ -167,7 +167,7 @@
 
       </div>
 
-      <hr />
+      <hr /> -->
 
       <article class="get-involved">
 
@@ -177,7 +177,7 @@
 
       </article>
 
-      <hr />
+      <!-- <hr />
 
       <section class="sponsors">
 
@@ -192,7 +192,7 @@
           <li><a href="#"><img src="img/sponsor-5.png" alt="Sponsor 5"></a></li>
         </ul>
 
-      </section>
+      </section> -->
 
     </div>
 
@@ -206,18 +206,18 @@
 
       <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the web community in Brazil.</p>
 
-      <ul>
+      <!-- <ul>
         <li><a href="#">About</a></li>
         <li><a href="#">Team</a></li>
         <li><a href="#">Manifesto</a></li>
         <li><a href="#">Sponsors</a></li>
         <li><a href="#">Get involved</a></li>
         <li><a href="#">Contact us</a></li>
-      </ul>
+      </ul> -->
 
       <ul class="social">
-        <li><a href="#">Twitter @BrazilJS</a></li>
-        <li><a href="#">Google Plus</a></li>
+        <li><a href="#">Twitter</a></li>
+        <!-- <li><a href="#">Google Plus</a></li> -->
         <li><a href="#">Facebook</a></li>
       </ul>
 
