--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>BrazilJS - Moving &amp; Uniting</title>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -12,8 +12,8 @@
 
     <nav class="top-bar">
 
-      <div class="center">
-        <a href="/"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
+      <div class="wrapper">
+        <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
 
         <ul>
@@ -32,7 +32,7 @@
 
     <section class="banner">
 
-      <div class="center">
+      <div class="wrapper">
         <img class="logo" src="img/logo.png" alt="BrazilJS Logo">
         <h1>moving &amp; uniting</h1>
         <p>We not only bring content to people, we want to unite them. <a href="#">Read our manifesto</a></p>
@@ -44,7 +44,7 @@
 
   <section class="content">
 
-    <div class="center">
+    <div class="wrapper">
 
       <h2>Let us present our projects! <span>You'll see so much from now.</span></h2>
 
@@ -200,7 +200,7 @@
 
   <footer>
 
-    <div class="center">
+    <div class="wrapper">
 
       <img src="img/logo-pb.png" alt="BrazilJS Logo">
 
