--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>BrazilJS - Moving &amp; Uniting</title>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" href="favicon.ico" >
+  <link rel="icon" type="image/gif" href="favicon.gif" >
 </head>
 <body>
 
