referencing braziljs's foundation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>BrazilJS - Moving &amp; Uniting</title>
+  <title>BrazilJS Foundation - Moving &amp; Uniting</title>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" href="favicon.ico" >
