add form input & button #8

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <h3>Get involved</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Nulla facilisi. Integer volutpat turpis at eros vestibulum non tristique elit lacinia. Fusce non dolor a ipsum iaculis scelerisque. <a href="#">Donec varius gravida odio</a>.</p>
 
+        <form>
+          <input type="email" placeholder="Enter your email here">
+          <input type="submit" value="Sign me">
+        </form>
+
       </article>
 
     </div>
