--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
 
-        <iframe class="facebook-share-button" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbraziljs.org%2F&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=199580610147156" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
+        <a class="flag br" href="/en" title="English">English</a>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
 
         <!-- Tweet Button -->
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+        <iframe class="facebook-share-button" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbraziljs.org%2F&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=199580610147156" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
 
       </div>
 
