--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
 
-        <a class="flag br" href="/en" title="English">English</a>
+        <a class="flag br" href="/index-br.html" title="Portuguese">Portuguese</a>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
 
@@ -36,7 +36,7 @@
       <div class="wrapper">
         <img class="logo" src="img/logo.png" alt="BrazilJS Logo">
         <h1>moving &amp; uniting</h1>
-        <p>We not only bring content to people, we want to unite them. <a href="#">Read our manifesto</a></p>
+        <p>We not only bring content to people, we want to unite them. <a href="/manifesto.html">Read our manifesto</a></p>
       </div>
 
     </section>
@@ -47,11 +47,11 @@
 
     <div class="wrapper">
 
-      <article class="get-involved">
+      <article class="join-us">
 
         <img src="img/img-getinvolved.png" alt="Brazilian Heart">
-        <h3>Get involved</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Nulla facilisi. Integer volutpat turpis at eros vestibulum non tristique elit lacinia. Fusce non dolor a ipsum iaculis scelerisque. <a href="#">Donec varius gravida odio</a>.</p>
+        <h3>Join us</h3>
+        <p>We are starting a movement to unify the JavaScript community of Brazil, front-end or back-end. Stay tuned for the news we are preparing. <a href="https://groups.google.com/forum/?fromgroups#!forum/braziljs-group">Join the discussion group</a>.</p>
 
         <form>
           <input type="email" placeholder="Enter your email here">
@@ -70,20 +70,20 @@
 
       <img src="img/logo-pb.png" alt="BrazilJS Logo">
 
-      <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the web community in Brazil.</p>
+      <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil.</p>
 
       <ul>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Manifesto</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="/team.html">Team</a></li>
+        <li><a href="/manifesto.html">Manifesto</a></li>
+        <li><a href="/contact.html">Contact us</a></li>
       </ul>
 
       <ul class="social">
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Facebook</a></li>
+        <li><a href="https://twitter.com/braziljs">Twitter</a></li>
+        <li><a href="http://www.facebook.com/braziljs">Facebook</a></li>
       </ul>
 
-      <p class="license">© 2012. Content available under a <a href="#">Creative Commons</a> license.</p>
+      <p class="license">© 2012. Content available under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a> license.</p>
 
     </div>
 
