--- a/manifesto-br.html
+++ b/manifesto-br.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>BrazilJS Foundation - Manifesto</title>
@@ -15,8 +15,8 @@
     <nav class="top-bar">
 
       <div class="wrapper">
-        <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
-        <p>moving &amp; uniting</p>
+        <a href="/index-br.html" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
+        <p>movendo &amp; unindo</p>
 
         <a class="flag br" href="/manifesto-br.html" title="Portuguese">Portuguese</a>
 
@@ -35,8 +35,8 @@
 
       <div class="wrapper">
         <img class="logo" src="img/logo.png" alt="BrazilJS Logo">
-        <h1>moving &amp; uniting</h1>
-        <p>We not only bring content to people, we want to unite them. <a href="/manifesto.html">Read our manifesto</a></p>
+        <h1>movendo &amp; unindo</h1>
+        <p>Nós não trazemos apenas conteúdo para as pessoas, nós queremos uní-las. <a href="/manifesto-br.html">Leia nosso manifesto</a></p>
       </div>
 
     </section>
@@ -73,12 +73,12 @@
 
       <img src="img/logo-pb.png" alt="BrazilJS Logo">
 
-      <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil.</p>
+      <p class="about">BrazilJS Foundation é uma fundação sem fins lucrativos com a missão de mover e unir a comunidade de JavaScript no Brasil.</p>
 
       <ul>
-        <li><a href="/team.html">Team</a></li>
-        <li><a href="/manifesto.html">Manifesto</a></li>
-        <li><a href="/contact.html">Contact us</a></li>
+        <li><a href="/team-br.html">Time</a></li>
+        <li><a href="/manifesto-br.html">Manifesto</a></li>
+        <li><a href="/contact-br.html">Contato</a></li>
       </ul>
 
       <ul class="social">
@@ -86,7 +86,7 @@
         <li><a href="http://www.facebook.com/braziljs">Facebook</a></li>
       </ul>
 
-      <p class="license">© 2012. Content available under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a> license.</p>
+      <p class="license">© 2012. Conteúdo disponível sob a licença <a href="http://creativecommons.org/licenses/by/3.0/br/">Creative Commons</a>.</p>
 
     </div>
 
