translation link fix

--- a/manifesto-br.html
+++ b/manifesto-br.html
@@ -18,7 +18,7 @@
         <a href="/index-br.html" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>movendo &amp; unindo</p>
 
-        <a class="flag br" href="/manifesto-br.html" title="Portuguese">Portuguese</a>
+        <a class="flag en" href="/manifesto.html" title="English">English</a>>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
 
