error/success message created

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
           <input type="submit" value="Sign me">
         </form>
 
+        <!-- <div class="alert success">
+          <strong>Lorem</strong> ipsum ipsum ipsum ipsum!
+        </div> -->
+
+        <!-- <div class="alert error">
+          <strong>Sorry!</strong> Please insert a valid email.
+        </div> -->
+
       </article>
 
     </div>
