adding open graph

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
   <title>BrazilJS Foundation - Moving &amp; Uniting</title>
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
+  
+  <!-- general meta tags -->
+  <meta charset="UTF-8">
+  <meta name="robots" content="all, index, follow" />
+  <meta name="description" content="BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil." />
+
+  <!-- favicon -->
   <link rel="shortcut icon" href="favicon.ico" >
   <link rel="icon" type="image/gif" href="favicon.gif" >
+  
+  <!-- google fonts -->
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+  
+  <!-- styles -->
+  <link rel="stylesheet" href="css/main.css">
+
+  <!-- open graph -->
+  <meta property="og:title" content="BrazilJS Foundation" />
+  <meta property="og:type" content="article"/>
+  <meta property="og:description" content="BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil" />
+  <meta property="og:url" content="http://braziljs.org/"/>
+  <meta property="og:image" content="http://braziljs.org/img/facebook.png" />
+  <meta property="og:site_name" content="BrazilJS"/>
+  <meta property="og:locale" content="en_US" />
+  <!-- <meta property="fb:app_id" content="460492653966145" /> -->
+
 </head>
 <body>
 
@@ -75,10 +96,10 @@
 
       <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil.</p>
 
-      <ul>
-        <li><a href="/team.html">Team</a></li>
-        <li><a href="/manifesto.html">Manifesto</a></li>
-        <li><a href="/contact.html">Contact us</a></li>
+      <ul class="nav">
+        <li><a href="/team.html" title="Team">Team</a></li>
+        <li><a href="/manifesto.html" title="Manifesto">Manifesto</a></li>
+        <li><a href="/contact.html" title="Contact us">Contact us</a></li>
       </ul>
 
       <ul class="social">
