--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en-US">
 <head>
   <title>BrazilJS Foundation - Moving &amp; Uniting</title>
-  
+
   <!-- general meta tags -->
   <meta charset="UTF-8">
   <meta name="robots" content="all, index, follow" />
   <meta name="description" content="BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil." />
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="favicon.ico" >
-  <link rel="icon" type="image/gif" href="favicon.gif" >
-  
-  <!-- google fonts -->
+  <link rel="shortcut icon" href="favicon.ico">
+
+  <!-- fonts -->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
-  
+
   <!-- styles -->
   <link rel="stylesheet" href="css/main.css">
 
@@ -23,7 +22,7 @@
   <meta property="og:type" content="article"/>
   <meta property="og:description" content="BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil" />
   <meta property="og:url" content="http://braziljs.org/"/>
-  <meta property="og:image" content="http://braziljs.org/img/facebook.png" />
+  <meta property="og:image" content="http://braziljs.org/img/fb-share.jpg" />
   <meta property="og:site_name" content="BrazilJS"/>
   <meta property="og:locale" content="en_US" />
   <!-- <meta property="fb:app_id" content="460492653966145" /> -->
