adding fb:app_id

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- favicon -->
   <link rel="shortcut icon" href="favicon.ico">
 
-  <!-- fonts -->
+  <!-- google fonts -->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
 
   <!-- styles -->
@@ -25,7 +25,7 @@
   <meta property="og:image" content="http://braziljs.org/img/fb-share.jpg" />
   <meta property="og:site_name" content="BrazilJS"/>
   <meta property="og:locale" content="en_US" />
-  <!-- <meta property="fb:app_id" content="460492653966145" /> -->
+  <meta property="fb:app_id" content="372862979453673" />
 
 </head>
 <body>
