--- a/manifesto.html
+++ b/manifesto.html
@@ -48,16 +48,16 @@
       <article class="manifesto single-page">
 
         <h3>Manifesto</h3>
-        <p><strong>Trust</strong> - which must be respected and never put at risk;</p>
-        <p><strong>Dialog</strong> - is the way to establish a truly trustful relationship;</p>
-        <p><strong>Personal Contact</strong> - the richest experience, not matched by any media or technology;</p>
-        <p><strong>Transparency</strong> - the mean to maintain a sustainable community;</p>
-        <p><strong>Diversity</strong> - people have many interests, but if you need a label, label yourself as a human;</p>
-        <p><strong>Self-organization</strong> - leaders emerge, but there should be no owners;</p>
-        <p><strong>Example</strong> - that's how you must teach, live and learn;</p>
-        <p><strong>Consistency</strong> - things take time, intensity is not always the answer;</p>
-        <p><strong>Give, give, give!</strong> - you'll be impressed by how fast things will come back;</p>
-        <p><strong>Do it!</strong> - as simple as you can, just what is essential to pass it forward.</p>
+        <p><strong>Trust</strong> - lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Dialog</strong> - lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Personal Contact</strong> - lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Transparency</strong> - lorem ipsum lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Diversity</strong> - lorem ipsum lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Self-organization</strong> - lorem ipsum lorem ipsum;</p>
+        <p><strong>Example</strong> - lorem ipsum lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Consistency</strong> - lorem ipsum lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Give, give, give!</strong> - lorem ipsum lorem ipsum lorem ipsum lorem ipsum;</p>
+        <p><strong>Do it!</strong> - lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
 
       </article>
 
