--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil.</p>
 
       <ul class="nav">
-        <li><a href="/team.html" title="Team">Team</a></li>
-        <li><a href="/manifesto.html" title="Manifesto">Manifesto</a></li>
-        <li><a href="/contact.html" title="Contact us">Contact us</a></li>
+        <li><a href="team.html" title="Team">Team</a></li>
+        <li><a href="manifesto.html" title="Manifesto">Manifesto</a></li>
+        <li><a href="contact.html" title="Contact us">Contact us</a></li>
       </ul>
 
       <ul class="social">
