--- a/manifesto.html
+++ b/manifesto.html
@@ -74,9 +74,9 @@
       <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil.</p>
 
       <ul>
-        <li><a href="/team.html">Team</a></li>
-        <li><a href="/manifesto.html">Manifesto</a></li>
-        <li><a href="/contact.html">Contact us</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="manifesto.html">Manifesto</a></li>
+        <li><a href="contact.html">Contact us</a></li>
       </ul>
 
       <ul class="social">
