--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </footer>
 
   <script src="js/jquery.js"></script>
-  <script src='js/ajax.js'></script>
+  <script src='js/newsletter.js'></script>
 
   <script>
   $(document).ready(function() {
