Add members description #29

--- a/team.html
+++ b/team.html
@@ -58,10 +58,10 @@
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
           </li>
           <li>
-            <img src="img/avatar/davidson.jpg" alt="">
+            <img src="img/avatar/davidson.jpg" alt="Davidson Fellipe">
             <p class="name">Davidson Fellipe</p>
             <p class="position">Regional Conference Lead</p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
+            <p class="description">Founder and moderator of RioJS and PernambucoJS (JS user groups), graduated in Computer Engineering at UPE. Currently is Front-end engineer at Globo.com and Master degree Candidate at PUC-Rio.</p>
           </li>
           <li>
             <img src="img/avatar/felipe.jpg" alt="">
