--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,31 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
+  <title>BrazilJS Foundation - Moving &amp; Uniting</title>
+
+  <!-- general meta tags -->
   <meta charset="UTF-8">
-  <title>BrazilJS Foundation - Contact</title>
+  <meta name="robots" content="all, index, follow" />
+  <meta name="description" content="BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil." />
+
+  <!-- favicon -->
+  <link rel="shortcut icon" href="favicon.ico">
+
+  <!-- google fonts -->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+
+  <!-- styles -->
   <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" href="favicon.ico" >
-  <link rel="icon" type="image/gif" href="favicon.gif" >
+
+  <!-- open graph -->
+  <meta property="og:title" content="BrazilJS Foundation" />
+  <meta property="og:type" content="article"/>
+  <meta property="og:description" content="BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil" />
+  <meta property="og:url" content="http://braziljs.org/"/>
+  <meta property="og:image" content="http://braziljs.org/img/fb-share.jpg" />
+  <meta property="og:site_name" content="BrazilJS"/>
+  <meta property="og:locale" content="en_US" />
+  <meta property="fb:app_id" content="372862979453673" />
 </head>
 <body>
 
