--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
             <img src="img/avatar/giovanni.jpg" alt="">
             <p class="name">Giovanni Keppelen</p>
             <p class="position">Regional Conference Lead</p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
+            <p class="description">Idealizador e organizador do @frontInBH e moderador do Rio.js, graduando em Produção Multimidia pela UNI-BH, Front-end engineer com foco em Performance no Peixe Urbano e Tech leader.</p>
           </li>
           <li>
             <img src="img/avatar/jaydson.jpg" alt="">
