issue #18 and navigation header, page team

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
   <meta property="og:site_name" content="BrazilJS"/>
   <meta property="og:locale" content="en_US" />
   <meta property="fb:app_id" content="372862979453673" />
+
 </head>
 <body>
 
@@ -40,6 +41,12 @@
       <div class="wrapper">
         <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
+
+        <ul>
+          <li>/ <a href="team.html" title="Team BrazilJS Fundation">Team</a></li>
+          <li>/ <a href="manifesto.html" title="Manifesto BrazilJS Fundation">Manifesto</a></li>
+          <li>/ <a href="contact.html" title="Contact US BrazilJS Fundation">Contact US</a></li>
+        </ul>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
 
