--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
 
+        <ul>
+          <li>/ <a href="team.html" title="Team BrazilJS Fundation">Team</a></li>
+          <li>/ <a href="manifesto.html" title="Manifesto BrazilJS Fundation">Manifesto</a></li>
+          <li>/ <a href="contact.html" title="Contact US BrazilJS Fundation">Contact US</a></li>
+        </ul>
+
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
 
         <!-- Tweet Button -->
