--- a/team.html
+++ b/team.html
@@ -3,6 +3,10 @@
 <head>
   <title>BrazilJS Foundation - Moving &amp; Uniting</title>
 
+  <!--[if IE]>
+    <script src="js/html5shiv.js"></script>
+  <![endif]-->
+
   <!-- general meta tags -->
   <meta charset="UTF-8">
   <meta name="robots" content="all, index, follow" />
@@ -26,6 +30,7 @@
   <meta property="og:site_name" content="BrazilJS"/>
   <meta property="og:locale" content="en_US" />
   <meta property="fb:app_id" content="372862979453673" />
+
 </head>
 <body>
 
@@ -36,6 +41,12 @@
       <div class="wrapper">
         <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
         <p>moving &amp; uniting</p>
+
+        <ul>
+          <li>/ <a href="team.html" title="Team BrazilJS Fundation">Team</a></li>
+          <li>/ <a href="manifesto.html" title="Manifesto BrazilJS Fundation">Manifesto</a></li>
+          <li>/ <a href="contact.html" title="Contact US BrazilJS Fundation">Contact US</a></li>
+        </ul>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
 
@@ -67,48 +78,48 @@
       <article class="team single-page">
 
         <h3>Team</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Nulla facilisi. Integer volutpat turpis at eros vestibulum non tristique elit lacinia. Fusce non dolor a ipsum iaculis scelerisque. Nulla facilisi. Integer volutpat turpis at eros vestibulum non tristique elit lacinia. Fusce non dolor a ipsum iaculis scelerisque.</p>
+        <p></p>
 
         <ul>
           <li>
             <a href="#"><img src="img/avatar/bernard.jpg" alt=""></a>
-            <p class="name"><a href="#">Bernard de Luna</a></p>
+            <p class="name"><a href="http://twitter.com/bernarddeluna" target="_blank">Bernard de Luna</a></p>
             <p class="position">Community Labs Lead</p>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
           </li>
           <li>
             <a href="#"><img src="img/avatar/davidson.jpg" alt="Davidson Fellipe"></a>
-            <p class="name"><a href="#">Davidson Fellipe</a></p>
+            <p class="name"><a href="http://twitter.com/davidsonFellipe" target="_blank">Davidson Fellipe</a></p>
             <p class="position">Regional Conference Lead</p>
             <p class="description">Founder and moderator of RioJS and PernambucoJS (JS user groups), graduated in Computer Engineering at UPE. Currently is Front-end engineer at Globo.com and Master degree Candidate at PUC-Rio.</p>
           </li>
           <li>
             <a href="#"><img src="img/avatar/felipe.jpg" alt=""></a>
-            <p class="name"><a href="#">Felipe N. Moura</a></p>
+            <p class="name"><a href="http://twitter.com/felipenmoura" target="_blank">Felipe N. Moura</a></p>
             <p class="position">National Conference Lead</p>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
           </li>
           <li>
             <a href="#"><img src="img/avatar/giovanni.jpg" alt=""></a>
-            <p class="name"><a href="#">Giovanni Keppelen</a></p>
+            <p class="name"><a href="http://twitter.com/keppelen" target="_blank">Giovanni Keppelen</a></p>
             <p class="position">Regional Conference Lead</p>
             <p class="description">Idealizador e organizador do @frontInBH e moderador do Rio.js, graduando em Produção Multimidia pela UNI-BH, Front-end engineer com foco em Performance no Peixe Urbano e Tech leader.</p>
           </li>
           <li>
             <a href="#"><img src="img/avatar/jaydson.jpg" alt=""></a>
-            <p class="name"><a href="#">Jaydson Gomes</a></p>
+            <p class="name"><a href="http://twitter.com/jaydson" target="_blank">Jaydson Gomes</a></p>
             <p class="position">National Conference Lead</p>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
           </li>
           <li>
             <a href="#"><img src="img/avatar/leo.jpg" alt=""></a>
-            <p class="name"><a href="#">Leo Balter</a></p>
+            <p class="name"><a href="http://twitter.com/leobalter" target="_blank">Leo Balter</a></p>
             <p class="position">Community Blog Lead</p>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae orci eget dui semper.</p>
           </li>
           <li>
             <a href="http://zenorocha.com/"><img src="img/avatar/zeno.jpg" alt=""></a>
-            <p class="name"><a href="http://zenorocha.com/">Zeno Rocha</a></p>
+            <p class="name"><a href="http://zenorocha.com/" target="_blank">Zeno Rocha</a></p>
             <p class="position">Community Relations Lead</p>
             <p class="description">One of the creators of <a href="http://jqueryboilerplate.com">jQuery Boilerplate</a>, <a href="http://www.chromeexperiments.com/detail/wormz/">Wormz</a> and <a href="//diveintohtml5.com.br/">Dive into HTML5</a> translation lead. With only 21 years-old, he already worked as a software developer at Petrobras and Globoesporte.com. Now he is a Front-end Engineer at <a href="http://liferay.com/">Liferay</a>.</p>
           </li>
