validation for ajax client side for page contact and home

--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
               required: true,
               email: true
             }
+          },
+          submitHandler: function() {
+            //pegamos os valores de todos os campos
+            var valores = $("#get-involved-form").serialize();
+            //e enviamos para a página demoajaxresult.php
+            $.post("app/newsletter.php", valores,
+            function(data) {
+                //depois do envio, e receber o resultado
+            });
           }
       })
   });
