--- a/contact.html
+++ b/contact.html
@@ -169,6 +169,15 @@
             message:{
               required: true
             }
+          },
+          submitHandler: function() {
+            //pegamos os valores de todos os campos
+            var valores = $("#get-involved-form").serialize();
+            //e enviamos para a página demoajaxresult.php
+            $.post("app/contact.php", valores,
+            function(data) {
+                //depois do envio, e receber o resultado
+            });
           }
       })
   });
